--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="LoginText">Log In</string>
     <string name="AdminButton">Admin</string>
     <string name="VoterButton">Voter</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="EmailText">Email</string>
+    <string name="PasswordText">Password</string>
+    <string name="RollNumberText">Roll Number</string>
 </resources>
